--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,10 +11,12 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  font-family: 400 0.4861111111111111em "Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
+  font-family: "Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
 }
-h2 {
-  text-transform: uppercase;
+h5 {
+  font-weight: normal;
+  font-size: 16px;
+  margin: 0 0 10px 0;
 }
 ul {
   list-style: none;
@@ -55,19 +57,19 @@ div.head a {
   margin: 0 auto;
   padding-top: 36px;
 }
-#header > a {
-  float: left;
-  font-size: 30px;
-  line-height: 30px;
-  font-weight: bold;
-  text-shadow: 0px 0px 0 #d0d0d0, 1px 1px 0 #a0a0a0, 2px 2px 0 #717171, 2px 2px 0 #424242, 3px 3px 2px rgba(0, 0, 0, 0.2), 3px 3px 1px rgba(0, 0, 0, 0.1), 0px 0px 2px rgba(0, 0, 0, 0.2);
-}
 #header:after {
   content: '';
   display: block;
   clear: both;
   visibility: hidden;
   height: 0;
+}
+#title {
+  float: left;
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: bold;
+  text-shadow: 0px 0px 0 #d0d0d0, 1px 1px 0 #a0a0a0, 2px 2px 0 #717171, 2px 2px 0 #424242, 3px 3px 2px rgba(0, 0, 0, 0.2), 3px 3px 1px rgba(0, 0, 0, 0.1), 0px 0px 2px rgba(0, 0, 0, 0.2), 3px 3px 8px rgba(0, 0, 0, 0.6);
 }
 #entrance {
   float: right;
@@ -90,13 +92,17 @@ div.head a {
   padding: 0 22%;
 }
 #purpose pre {
-  width: 380px;
+  width: 90%;
+  max-width: 460px;
   margin: 18px auto 0;
+  padding: 8px 0;
   text-align: center;
-  line-height: 40px;
+  line-height: 24px;
   background-color: #0A4A3E;
   border-radius: 3px;
   color: #34b22b;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 #purpose pre small {
   color: #aaaaaa;
@@ -113,6 +119,8 @@ div.head a {
 }
 #search input {
   width: 100%;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   font-size: 15px;
   border: 5px solid #16a085;
   border-radius: 0;
@@ -123,6 +131,9 @@ div.head a {
 }
 #search input:focus {
   outline: none;
+}
+#search input::-moz-placeholder {
+  color: #bbb;
 }
 div.gh-info {
   text-align: center;
@@ -157,14 +168,14 @@ div.hot-libs a img {
   height: 30px;
 }
 div.lib {
-  padding: 26px 13% 40px;
+  padding: 20px 13% 40px;
   background-color: #ECF0F1;
 }
 div.lib:nth-child(2n) {
   background-color: #FFFFFF;
 }
 div.lib h2 {
-  margin: 26px 0 0 0;
+  margin: 20px 0 0 0;
   color: #2e2f2a;
   font-size: 20px;
   font-weight: normal;
@@ -182,58 +193,58 @@ div.lib table {
   background-color: #fff;
   border-collapse: collapse;
 }
+div.lib table tr {
+  border-bottom: 1px solid #dddee0;
+}
+div.lib table tr:last-child {
+  border-bottom: 0;
+}
 div.lib table th,
 div.lib table td {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 10px;
+  padding: 10px 20px;
 }
 div.lib table th {
-  width: 20%;
+  width: 30%;
   color: #555;
-  line-height: 30px;
   font-weight: normal;
   vertical-align: text-top;
   background-color: #fbfbfb;
 }
-div.lib table th small {
-  color: #acacac;
-}
 div.lib table td {
-  width: 80%;
+  width: 70%;
   border-left: 1px solid #dddee0;
-}
-div.lib table td pre {
-  font-size: 0;
   word-wrap: break-word;
-  white-space: pre-wrap;
 }
-div.lib table td code {
-  line-height: 20px;
-  font-family: "Courier New", Courier, monospace;
-  color: #777;
+div.lib table td > h5 {
+  color: #16a086;
+}
+div.lib table td ul.meaning {
   font-size: 15px;
+  color: #333;
+}
+div.lib table td ul.meaning li {
+  line-height: 25px;
+}
+div.lib table td ul.meaning i {
+  color: #21bebf;
+}
+div.lib table td ul.extend {
+  margin-top: 25px;
+  color: #121212;
+  font-size: 13px;
+}
+div.lib table td ul.extend:first-child {
+  margin-top: 0;
+}
+div.lib table td ul.extend h5 {
+  color: #296da2;
+}
+div.lib table td ul.extend li {
+  line-height: 20px;
 }
 div.lib:after {
-  content: '';
-  display: block;
-  clear: both;
-  visibility: hidden;
-  height: 0;
-}
-ul.lib-refference {
-  float: left;
-  font-size: 13px;
-  margin-top: 20px;
-}
-ul.lib-refference li {
-  float: left;
-  color: #d8d4d7;
-}
-ul.lib-refference li a {
-  color: #1ABC9C;
-}
-ul.lib-refference:after {
   content: '';
   display: block;
   clear: both;
@@ -245,6 +256,8 @@ ul.lib-refference:after {
   width: 30%;
   margin: 0 auto;
   text-align: center;
+  font-family: Georgia,serif;
+  font-style: italic;
 }
 #footer img {
   width: 290px;
@@ -252,16 +265,50 @@ ul.lib-refference:after {
 }
 #footer p {
   color: #888;
-}
-#footer p:first-child {
-  margin-top: 14px;
-}
-#footer p:nth-child(2) {
-  margin-top: 26px;
+  margin: 10px 0 0 0;
 }
 #footer p a {
   color: #1ABC9C;
 }
 #footer p small {
   margin: 0 4px;
+}
+@media all and (max-width: 768px) {
+  #header {
+    text-align: center;
+  }
+  #purpose {
+    display: none;
+  }
+  #search {
+    width: 95%;
+    padding: 0 2.5%;
+  }
+  #title {
+    display: block;
+  }
+  #title,
+  #entrance {
+    float: none;
+  }
+  #entrance {
+    margin-top: 10px;
+  }
+  #entrance li {
+    float: none;
+    display: inline-block;
+  }
+  div.lib {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+  #footer {
+    width: 90%;
+  }
+  th,
+  td {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px 5px !important;
+  }
 }
