--- a/static/css/style.less
+++ b/static/css/style.less
@@ -13,11 +13,13 @@ html {
 body {
     margin: 0;
     min-height: 100%;
-    font-family: 400 0.875em/1.8 "Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
+    font-family: "Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
 }
 
-h2 {
-    text-transform: uppercase;
+h5 {
+    font-weight: normal;
+    font-size: 16px/@z;
+    margin: 0 0 10px 0/@z;
 }
 
 ul {
@@ -65,22 +67,23 @@ div.head {
     width: 79.4%;
     margin: 0 auto;
     padding-top: 36px/@z;
-    &>a {
-        float: left;
-        font-size: 30px/@z;
-        line-height: 30px/@z;
-        font-weight: bold;
-        text-shadow: 0px 0px 0 rgb(208,208,208),
-        1px 1px 0 rgb(160,160,160),
-        2px 2px 0 rgb(113,113,113),
-        2px 2px 0 rgb(66,66,66),
-        3px 3px 2px rgba(0,0,0,0.2),
-        3px 3px 1px rgba(0,0,0,0.1),
-        0px 0px 2px rgba(0,0,0,0.2);
-    }
     &:after {
         .clearPrefix;
     }
+}
+#title {
+    float: left;
+    font-size: 30px/@z;
+    line-height: 30px/@z;
+    font-weight: bold;
+    text-shadow: 0px 0px 0 rgb(208,208,208),
+    1px 1px 0 rgb(160,160,160),
+    2px 2px 0 rgb(113,113,113),
+    2px 2px 0 rgb(66,66,66),
+    3px 3px 2px rgba(0,0,0,0.2),
+    3px 3px 1px rgba(0,0,0,0.1),
+    0px 0px 2px rgba(0,0,0,0.2),
+    3px 3px 8px rgba(0,0,0,0.6);
 }
 #entrance {
     float: right;
@@ -99,13 +102,17 @@ div.head {
     margin: 56px/@z auto 0;
     padding: 0 22%;
     pre {
-        width: 380px;
+        width: 90%;
+        max-width: 460px;
         margin: 18px/@z auto 0;
+        padding: 8px 0;
         text-align: center;
-        line-height: 40px;
+        line-height: 24px;
         background-color: #0A4A3E;
         border-radius: 3px;
         color: #34b22b;
+        white-space: pre-wrap;
+        word-wrap: break-word;
         small {
             color: #aaa
         }
@@ -122,16 +129,20 @@ div.head {
     margin: 20px/@z auto 0;
     input {
         width: 100%;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
         font-size: 15px;
         border: 5px solid #16a085;
         border-radius: 0;
-//        height: 14px/@z;
         padding: 10px 0;
         line-height: 25px;
         text-align: center;
         color: #111;
         &:focus {
             outline: none;
+        }
+        &::-moz-placeholder {
+            color: #bbb;
         }
     }
 }
@@ -169,13 +180,13 @@ div.hot-libs {
 }
 
 div.lib {
-    padding: 26px/@z 13% 40px/@z;
+    padding: 20px/@z 13% 40px/@z;
     background-color: #ECF0F1;
     &:nth-child(2n) {
         background-color: #FFFFFF;
     }
     h2 {
-        margin: 26px/@z 0 0 0;
+        margin: 20px/@z 0 0 0;
         color: #2e2f2a;
         font-size: 20px/@z;
         font-weight: normal;
@@ -192,54 +203,57 @@ div.lib {
         border: 1px solid #dddee0;
         background-color: #fff;
         border-collapse: collapse;
+        tr {
+            border-bottom: 1px solid #dddee0;
+            &:last-child {
+                border-bottom: 0;
+            }
+        }
         th,td{
             -webkit-box-sizing: border-box;
             box-sizing: border-box;
-            padding: 10px;
+            padding: 10px 20px;
         }
         th{
-            width: 20%;
+            width: 30%;
             color: #555;
-            line-height: 30px;
             font-weight: normal;
             vertical-align: text-top;
             background-color: #fbfbfb;
-            small {
-                color: #acacac
-            }
         }
         td{
-            width: 80%;
+            width: 70%;
             border-left: 1px solid #dddee0;
-            pre {
-                font-size: 0;
-                word-wrap: break-word;
-                white-space: pre-wrap;
+            word-wrap: break-word;
+            &>h5 {
+                color: #16a086;
             }
-            code {
-                line-height: 20px;
-                font-family: "Courier New", Courier, monospace;
-                color: #777;
+            ul.meaning {
+                li {
+                    line-height: 25px;
+                }
                 font-size: 15px;
+                color: #333;
+                i {
+                    color: #21bebf;
+                }
+            }
+            ul.extend {
+                margin-top: 25px;
+                color: #121212;
+                font-size: 13px;
+                &:first-child {
+                    margin-top: 0;
+                }
+                h5 {
+                    color: #296da2;
+                }
+                li {
+                    line-height: 20px;
+                }
             }
         }
 
-    }
-    &:after {
-        .clearPrefix;
-    }
-}
-
-ul.lib-refference {
-    float: left;
-    font-size: 13px;
-    margin-top: 20px/@z;
-    li {
-        float: left;
-        color: #d8d4d7;
-        a {
-            color: #1ABC9C;
-        }
     }
     &:after {
         .clearPrefix;
@@ -251,23 +265,57 @@ ul.lib-refference {
     width: 30%;
     margin: 0 auto;
     text-align: center;
+    font-family:Georgia,serif;font-style:italic;
     img {
         width: 290px/@z;
         margin: 50px/@z auto 0;
     }
     p{
         color: #888;
-        &:first-child {
-            margin-top: 14px/@z;
-        }
-        &:nth-child(2) {
-            margin-top: 26px/@z;
-        }
+        margin: 10px/@z 0 0 0;
         a {
             color: #1ABC9C;
         }
         small {
             margin: 0 4px;
         }
+    }
+}
+
+@media all and (max-width: 768px) {
+    #header {
+        text-align: center;
+    }
+    #purpose, {
+        display: none;
+    }
+    #search {
+        width: 95%;
+        padding: 0 2.5%;
+    }
+    #title {
+        display: block;
+    }
+    #title, #entrance {
+        float: none;
+    }
+    #entrance {
+        margin-top: 10px;
+        li {
+            float: none;
+            display: inline-block;
+        }
+    }
+    div.lib {
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+    #footer {
+        width: 90%;
+    }
+    th,td{
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        padding: 10px 5px !important;
     }
 }
