--- a/static/css/style.css
+++ b/static/css/style.css
@@ -137,10 +137,12 @@ div.head a {
 }
 div.gh-info {
   text-align: center;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   font-size: 0;
   margin-top: 40px;
   padding-top: 15px;
-  height: 40px;
+  height: 50px;
   background-color: #16a086;
 }
 div.gh-info iframe {
@@ -166,6 +168,12 @@ div.hot-libs a:first-child {
 div.hot-libs a img {
   vertical-align: middle;
   height: 30px;
+}
+#loading {
+  margin: 30px 0;
+  text-align: center;
+  font-size: 20px;
+  color: #777;
 }
 div.lib {
   padding: 20px 13% 40px;
@@ -206,18 +214,18 @@ div.lib table td {
   padding: 10px 20px;
 }
 div.lib table th {
-  width: 30%;
+  width: 25%;
   color: #555;
   font-weight: normal;
   vertical-align: text-top;
   background-color: #fbfbfb;
 }
 div.lib table td {
-  width: 70%;
+  width: 75%;
   border-left: 1px solid #dddee0;
   word-wrap: break-word;
 }
-div.lib table td > h5 {
+div.lib table td h5.pronounce {
   color: #16a086;
 }
 div.lib table td ul.meaning {
@@ -296,7 +304,7 @@ div.lib:after {
   }
   #entrance li {
     float: none;
-    display: inline-block;
+    display: inline;
   }
   div.lib {
     padding-left: 2%;
