--- a/static/css/style.less
+++ b/static/css/style.less
@@ -148,10 +148,12 @@ div.head {
 }
 div.gh-info {
     text-align: center;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     font-size: 0;
     margin-top: 40px/@z;
     padding-top: 15px;
-    height: 40px;
+    height: 50px;
     background-color: #16a086;
     iframe {
         display: inline-block;
@@ -177,6 +179,13 @@ div.hot-libs {
             height: 30px/@z;
         }
     }
+}
+
+#loading {
+    margin: 30px 0;
+    text-align: center;
+    font-size: 20px;
+    color: #777;
 }
 
 div.lib {
@@ -215,17 +224,17 @@ div.lib {
             padding: 10px 20px;
         }
         th{
-            width: 30%;
+            width: 25%;
             color: #555;
             font-weight: normal;
             vertical-align: text-top;
             background-color: #fbfbfb;
         }
         td{
-            width: 70%;
+            width: 75%;
             border-left: 1px solid #dddee0;
             word-wrap: break-word;
-            &>h5 {
+            h5.pronounce {
                 color: #16a086;
             }
             ul.meaning {
@@ -303,7 +312,7 @@ div.lib {
         margin-top: 10px;
         li {
             float: none;
-            display: inline-block;
+            display: inline;
         }
     }
     div.lib {
