--- a/static/css/style.less
+++ b/static/css/style.less
@@ -1,10 +1,30 @@
 @z: 1;
+
+@globleFontFamily:"Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
 .clearPrefix {
     content: '';
     display: block;
     clear: both;
     visibility: hidden;
     height: 0;
+}
+.transitionFn(@prop:all, @decor: 0.7s){
+    -webkit-transition: @prop @decor;
+    -moz-transition: @prop @decor;
+    -ms-transition: @prop @decor;
+    -o-transition: @prop @decor;
+    transition: @prop @decor;
+}
+
+@font-face {
+    font-family: 'killWords';
+    src:url('../fonts/killWords.eot?-ho0e9a');
+    src:url('../fonts/killWords.eot?#iefix-ho0e9a') format('embedded-opentype'),
+url('../fonts/killWords.woff?-ho0e9a') format('woff'),
+url('../fonts/killWords.ttf?-ho0e9a') format('truetype'),
+url('../fonts/killWords.svg?-ho0e9a#killWords') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 html {
@@ -13,7 +33,7 @@ html {
 body {
     margin: 0;
     min-height: 100%;
-    font-family: "Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
+    font-family: @globleFontFamily;
 }
 
 h5 {
@@ -40,9 +60,6 @@ img {
     -ms-interpolation-mode: bicubic;
 }
 
-input {
-    -webkit-appearance: none;
-}
 
 ::selection {
     background-color: #1ABC9C;
@@ -291,6 +308,135 @@ div.lib {
     }
 }
 
+//about
+
+#about {
+    position: fixed;
+    font-size: 0px;
+    border-left: 1px solid #1c986e;
+    top: 0;
+    right: 0;
+    height: 100%;
+//    animate hook
+    width: 100%;
+//    width: 90%;
+    box-shadow: -2px 0 5px 0 rgba(0,0,0,0.2);
+    background-color: #fafafa;
+    &>div {
+        display: inline-block;
+    }
+    .ab-content {
+        box-sizing: border-box;
+//        这个属性竟然连ff 27都还要加前缀，看来要三思而用
+        -moz-box-sizing: border-box;
+        padding-left: 5%;
+        width: 95%;
+        vertical-align: top;
+        font-size: 17px;
+        color: #777;
+    }
+}
+
+#ab-toolbar {
+    position: relative;
+    z-index: 100;
+    width: 5%;
+    height: 100%;
+    cursor: pointer;
+    .transitionFn(background-color, 0.4s);
+    a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        &:after {
+            content: '>';
+            font-size: 20px;
+            position: absolute;
+            top: 50%;
+            margin-top: -20px;
+            width: 100%;
+            height: 40px;
+            line-height: 40px;
+            text-align: center;
+            font-family: killWords;
+            color: #fff;
+            background-color: #1ABC9C;
+        }
+    }
+    &:hover {
+        background-color: #1ABC9C;
+    }
+}
+
+#ab-contact{
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: #ccc;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    font-size: 25px;
+    a {
+        display: inline-block;
+        position: relative;
+        font-size: inherit;
+        vertical-align: middle;
+        margin: 0 10px;
+        font-family: killWords;
+        color: #888;
+        text-decoration: none;
+        .transitionFn(color, 0.4s);
+        &.ic-github:hover {
+            color: #222;
+        }
+        &.ic-weibo:hover {
+            color: #da412d;
+        }
+        &.ic-twitter:hover {
+            color: #5e97cb;
+        }
+        &.ic-email {
+            &:hover {
+                color: #759b4e;
+                span {
+                    visibility: visible;
+                    color: #555;
+                }
+            }
+            span {
+                position: absolute;
+                padding: 10px;
+                width: 150px;
+                left: -76px;
+                top: -40px;
+                line-height: 20px;
+                font-size: 10px;
+                font-family: @globleFontFamily;
+                text-align: center;
+                background-color: #fff;
+                visibility: hidden;
+                box-shadow: 0 1px 4px 0 rgba(0,0,0,0.3);
+                &:after {
+                    content: '';
+                    position: absolute;
+                    left: 50%;
+                    top: 100%;
+                    margin-left: -6px;
+                    width: 0px;
+                    height: 0px;
+                    border-top: 10px solid #fff;
+                    border-left: 10px solid transparent;
+                    border-right: 10px solid transparent;
+                }
+            }
+        }
+    }
+}
+
+
+//自适应
 @media all and (max-width: 768px) {
     #header {
         text-align: center;
@@ -327,4 +473,52 @@ div.lib {
         box-sizing: border-box;
         padding: 10px 5px !important;
     }
+
+    //    about
+    #about {
+        &>div {
+            display: block;
+        }
+        .ab-content {
+            width: 100%;
+            h1 {
+                text-align: center;
+                font-size: 20px;
+            }
+            p{
+                font-size: 14px;
+            }
+        }
+    }
+
+    #ab-toolbar{
+        position: absolute;
+        top: 0;
+        width: 40px;
+        height: 40px;
+        &:after {
+            top: 0;
+            margin: 0px;
+        }
+    }
 }
+
+
+//animation
+
+//about
+#about.ng-enter {
+    .animationFn(slideIn, 0.5s);
+}
+#about.ng-leave {
+    .animationFn(slideOut, 0.5s);
+}
+#about.ab-content.ng-enter {
+    .animationFn(fadeIn, 0.5s);
+}
+#about.ab-content.ng-leave {
+    .animationFn(fadeOut, 0.5s);
+}
+
+
+@import "animate";
