解决简介先出现的问题

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -318,7 +318,7 @@ div.lib {
     right: 0;
     height: 100%;
 //    animate hook
-    width: 100%;
+    width: 0;
 //    width: 90%;
     box-shadow: -2px 0 5px 0 rgba(0,0,0,0.2);
     background-color: #fafafa;
