--- a/static/css/style.css
+++ b/static/css/style.css
@@ -292,7 +292,7 @@ div.lib:after {
   top: 0;
   right: 0;
   height: 100%;
-  width: 100%;
+  width: 0;
   box-shadow: -2px 0 5px 0 rgba(0, 0, 0, 0.2);
   background-color: #fafafa;
 }
