--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,7 @@ html {
   height: 100%;
 }
 body {
+  position: relative;
   margin: 0;
   min-height: 100%;
   font-family: "Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
@@ -292,7 +293,7 @@ div.lib:after {
   top: 0;
   right: 0;
   height: 100%;
-  width: 0;
+  width: 100%;
   box-shadow: -2px 0 5px 0 rgba(0, 0, 0, 0.2);
   background-color: #fafafa;
 }
@@ -480,13 +481,75 @@ div.lib:after {
   -webkit-animation: slideOut 0.5s forwards;
   -moz-animation: slideOut 0.5s forwards;
 }
-#about.ab-content.ng-enter {
-  -webkit-animation: fadeIn 0.5s forwards;
-  -moz-animation: fadeIn 0.5s forwards;
+#load-cover.ng-leave {
+  -webkit-animation: fadeOut 1s forwards;
+  -moz-animation: fadeOut 1s forwards;
 }
-#about.ab-content.ng-leave {
-  -webkit-animation: fadeOut 0.5s forwards;
-  -moz-animation: fadeOut 0.5s forwards;
+#load-cover {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: 1000;
+}
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -25px;
+  margin-top: -15px;
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  font-size: 10px;
+}
+.spinner > div {
+  background-color: #1ABC9C;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+  animation: stretchdelay 1.2s infinite ease-in-out;
+}
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+.spinner .rect3 {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+@-webkit-keyframes stretchdelay {
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4);
+  }
+  20% {
+    -webkit-transform: scaleY(1);
+  }
+}
+@keyframes stretchdelay {
+  0%,
+  40%,
+  100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }
+  20% {
+    transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+  }
 }
 @-webkit-keyframes slideIn {
   0% {
