--- a/static/css/style.less
+++ b/static/css/style.less
@@ -31,6 +31,7 @@ html {
     height: 100%;
 }
 body {
+    position: relative;
     margin: 0;
     min-height: 100%;
     font-family: @globleFontFamily;
@@ -318,7 +319,7 @@ div.lib {
     right: 0;
     height: 100%;
 //    animate hook
-    width: 0;
+    width: 100%;
 //    width: 90%;
     box-shadow: -2px 0 5px 0 rgba(0,0,0,0.2);
     background-color: #fafafa;
@@ -504,7 +505,7 @@ div.lib {
 }
 
 
-//animation
+//animation----------------------
 
 //about
 #about.ng-enter {
@@ -513,12 +514,78 @@ div.lib {
 #about.ng-leave {
     .animationFn(slideOut, 0.5s);
 }
-#about.ab-content.ng-enter {
-    .animationFn(fadeIn, 0.5s);
-}
-#about.ab-content.ng-leave {
-    .animationFn(fadeOut, 0.5s);
+
+//loadcover
+#load-cover.ng-leave {
+    .animationFn(fadeOut, 1s);
 }
 
+//loading
+#load-cover {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 1000;
+}
+.spinner {
+//    margin: 100px auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -25px;
+    margin-top: -15px;
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    font-size: 10px;
+}
+
+.spinner > div {
+    background-color: #1ABC9C;
+    height: 100%;
+    width: 6px;
+    display: inline-block;
+
+    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+    animation: stretchdelay 1.2s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+.spinner .rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+
+@-webkit-keyframes stretchdelay {
+    0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
+    20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes stretchdelay {
+    0%, 40%, 100% {
+        transform: scaleY(0.4);
+        -webkit-transform: scaleY(0.4);
+    } 20% {
+          transform: scaleY(1.0);
+          -webkit-transform: scaleY(1.0);
+      }
+}
 
 @import "animate";
