--- a/template/search.html
+++ b/template/search.html
@@ -12,20 +12,16 @@
             <p>我们的目标是提供这样一个词典：它能查到你想查的单词和想翻译的句子。同时，也提供搜索查询历史和生词笔记的入口，让所有人都能复习自己查过的单词，而不是查过就算了。</p>
             <pre>使用方法：在搜索框中输入要查询的内容</pre>
         </div>
-        <div id="search"><input ng-change="check()" ng-model="query" type="text" placeholder="请输入中文或英文 .." autofocus autocomplete="off"/></div>
+        <div id="search" ng-keydown="selectByKey($event)" ng-mouseover="selectByCursor($event)" ng-click="selectByClick($event)">
+            <input ng-change="check()" ng-model="query" type="text" placeholder="请输入中文或英文 .." autofocus autocomplete="off"/>
+            <ul id="history" ng-if="history.showList">
+                <li ng-repeat="h in history.content">{{h}}</li>
+            </ul>
+        </div>
         <div class="gh-info">
             <iframe ng-src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" height="20px" scrolling="0" width="85px" src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=watch&amp;count=true"></iframe>
             <iframe ng-src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20" src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=fork&amp;count=true"></iframe>
         </div>
-    </div>
-    <div class="hot-libs">
-        <a href=""><img src="static/image/jquery.png" alt="jquery库"/></a>
-        <a href=""><img src="static/image/twitter-bootstrap.png" alt="bootstrap"/></a>
-        <a href=""><img src="static/image/angular.js.png" alt="angular.js"/></a>
-        <a href=""><img src="static/image/underscore.js.png" alt="underscore"/></a>
-        <a href=""><img src="static/image/backbone.js.png" alt="backbone"/></a>
-        <a href=""><img src="static/image/zepto.png" alt="zepto"/></a>
-        <a href=""><img src="static/image/seajs.png" alt="seaJs"/></a>
     </div>
     <div class="libs">
         <p id="loading" ng-if="!dataShow.loaded">I'm waiting...</p>
