--- a/static/css/style.less
+++ b/static/css/style.less
@@ -1,593 +1,2 @@
-@z: 1;
-
-@globleFontFamily:"Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
-.clearPrefix {
-    content: '';
-    display: block;
-    clear: both;
-    visibility: hidden;
-    height: 0;
-}
-.transitionFn(@prop:all, @decor: 0.7s){
-    -webkit-transition: @prop @decor;
-    -moz-transition: @prop @decor;
-    -ms-transition: @prop @decor;
-    -o-transition: @prop @decor;
-    transition: @prop @decor;
-}
-
-@font-face {
-    font-family: 'killWords';
-    src:url('../fonts/killWords.eot?-ho0e9a');
-    src:url('../fonts/killWords.eot?#iefix-ho0e9a') format('embedded-opentype'),
-url('../fonts/killWords.woff?-ho0e9a') format('woff'),
-url('../fonts/killWords.ttf?-ho0e9a') format('truetype'),
-url('../fonts/killWords.svg?-ho0e9a#killWords') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-html {
-    height: 100%;
-}
-body {
-    position: relative;
-    margin: 0;
-    min-height: 100%;
-    font-family: @globleFontFamily;
-}
-
-h5 {
-    font-weight: normal;
-    font-size: 16px/@z;
-    margin: 0 0 10px 0/@z;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-a {
-    text-decoration: none;
-    &:hover {
-        text-decoration: underline;
-    }
-}
-
-img {
-    border: 0;
-    -ms-interpolation-mode: bicubic;
-}
-
-
-::selection {
-    background-color: #1ABC9C;
-    color: #fff;
-}
-
-::-moz-selection {
-    background-color: #1ABC9C;
-    color: #fff;
-}
-
-div.head {
-    background-color: #1ABC9C;
-    color: #fff;
-    font-size: 13px/@z;
-    a {
-        color: #fff;
-    }
-}
-
-#header {
-    width: 79.4%;
-    margin: 0 auto;
-    padding-top: 36px/@z;
-    &:after {
-        .clearPrefix;
-    }
-}
-#title {
-    float: left;
-    font-size: 30px/@z;
-    line-height: 30px/@z;
-    font-weight: bold;
-    text-shadow: 0px 0px 0 rgb(208,208,208),
-    1px 1px 0 rgb(160,160,160),
-    2px 2px 0 rgb(113,113,113),
-    2px 2px 0 rgb(66,66,66),
-    3px 3px 2px rgba(0,0,0,0.2),
-    3px 3px 1px rgba(0,0,0,0.1),
-    0px 0px 2px rgba(0,0,0,0.2),
-    3px 3px 8px rgba(0,0,0,0.6);
-}
-#entrance {
-    float: right;
-    line-height: 30px/@z;
-    &:after {
-        .clearPrefix;
-    }
-    li {
-        float: left;
-    }
-}
-
-#purpose {
-    text-align: center;
-    max-width: 600px;
-    margin: 56px/@z auto 0;
-    padding: 0 22%;
-    pre {
-        width: 90%;
-        max-width: 460px;
-        margin: 18px/@z auto 0;
-        padding: 8px 0;
-        text-align: center;
-        line-height: 24px;
-        background-color: #0A4A3E;
-        border-radius: 3px;
-        color: #34b22b;
-        white-space: pre-wrap;
-        word-wrap: break-word;
-        small {
-            color: #aaa
-        }
-        a {
-            color: #eee;
-            &:link {
-                color: #eee;
-            }
-        }
-    }
-}
-#search {
-    position: relative;
-    width: 47%;
-    margin: 20px/@z auto 0;
-    font-size: 0px;
-    input {
-        width: 100%;
-        box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        font-size: 16px;
-        border: 5px solid #16a085;
-        border-radius: 0;
-        padding: 12px 0;
-        text-align: center;
-        color: #111;
-        &:focus {
-            outline: none;
-        }
-        &::-moz-placeholder {
-            color: #bbb;
-        }
-    }
-}
-#history {
-    width: 100%;
-    position: absolute;
-    top: 53px;
-    left: 0;
-    background-color: #fefefe;
-    box-shadow: 0 1px 2px 1px rgba(0,0,0,0.2);
-    li{
-        text-align: center;
-        padding: 10px 0;
-        font-size: 14px;
-        color: #666;
-        &.active {
-            background-color: #eee;
-        }
-    }
-}
-div.gh-info {
-    text-align: center;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    font-size: 0;
-    margin-top: 40px/@z;
-    padding-top: 15px;
-    height: 50px;
-    background-color: #16a086;
-    iframe {
-        display: inline-block;
-    }
-}
-
-#loading {
-    margin: 30px 0;
-    text-align: center;
-    font-size: 20px;
-    color: #777;
-}
-
-div.lib {
-    padding: 20px/@z 13% 40px/@z;
-    background-color: #ECF0F1;
-    &:nth-child(2n) {
-        background-color: #FFFFFF;
-    }
-    h2 {
-        margin: 20px/@z 0 0 0;
-        color: #2e2f2a;
-        font-size: 20px/@z;
-        font-weight: normal;
-    }
-    &>p{
-        margin: 10px/@z 0 0 0;
-        font-size: 14px/@z;
-        color: #5d5d5d;
-    }
-    table {
-        width: 100%;
-        margin-top: 15px/@z;
-        text-align: left;
-        border: 1px solid #dddee0;
-        background-color: #fff;
-        border-collapse: collapse;
-        tr {
-            border-bottom: 1px solid #dddee0;
-            &:last-child {
-                border-bottom: 0;
-            }
-        }
-        th,td{
-            -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-            padding: 10px 20px;
-        }
-        th{
-            width: 25%;
-            color: #555;
-            font-weight: normal;
-            vertical-align: text-top;
-            background-color: #fbfbfb;
-        }
-        td{
-            width: 75%;
-            border-left: 1px solid #dddee0;
-            word-wrap: break-word;
-            h5.pronounce {
-                color: #16a086;
-            }
-            ul.meaning {
-                li {
-                    line-height: 25px;
-                }
-                font-size: 15px;
-                color: #333;
-                i {
-                    color: #21bebf;
-                }
-            }
-            ul.extend {
-                margin-top: 25px;
-                color: #121212;
-                font-size: 13px;
-                &:first-child {
-                    margin-top: 0;
-                }
-                h5 {
-                    color: #296da2;
-                }
-                li {
-                    line-height: 20px;
-                }
-            }
-        }
-
-    }
-    &:after {
-        .clearPrefix;
-    }
-}
-
-#footer {
-    padding-bottom: 24px/@z ;
-    width: 30%;
-    margin: 0 auto;
-    text-align: center;
-    font-family:Georgia,serif;font-style:italic;
-    img {
-        width: 290px/@z;
-        margin: 50px/@z auto 0;
-    }
-    p{
-        color: #888;
-        margin: 10px/@z 0 0 0;
-        a {
-            color: #1ABC9C;
-        }
-        small {
-            margin: 0 4px;
-        }
-    }
-}
-
-//about
-
-#about {
-    position: fixed;
-    font-size: 0px;
-    border-left: 1px solid #1c986e;
-    top: 0;
-    right: 0;
-    height: 100%;
-//    animate hook
-    width: 100%;
-//    width: 90%;
-    box-shadow: -2px 0 5px 0 rgba(0,0,0,0.2);
-    background-color: #fafafa;
-    &>div {
-        display: inline-block;
-    }
-    .ab-content {
-        box-sizing: border-box;
-//        这个属性竟然连ff 27都还要加前缀，看来要三思而用
-        -moz-box-sizing: border-box;
-        padding-left: 5%;
-        width: 95%;
-        vertical-align: top;
-        font-size: 17px;
-        color: #777;
-    }
-}
-
-#ab-toolbar {
-    position: relative;
-    z-index: 100;
-    width: 5%;
-    height: 100%;
-    cursor: pointer;
-    .transitionFn(background-color, 0.4s);
-    a{
-        display: block;
-        width: 100%;
-        height: 100%;
-        &:after {
-            content: '>';
-            font-size: 20px;
-            position: absolute;
-            top: 50%;
-            margin-top: -20px;
-            width: 100%;
-            height: 40px;
-            line-height: 40px;
-            text-align: center;
-            font-family: killWords;
-            color: #fff;
-            background-color: #1ABC9C;
-        }
-    }
-    &:hover {
-        background-color: #1ABC9C;
-    }
-}
-
-#ab-contact{
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background-color: #ccc;
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    font-size: 25px;
-    a {
-        display: inline-block;
-        position: relative;
-        font-size: inherit;
-        vertical-align: middle;
-        margin: 0 10px;
-        font-family: killWords;
-        color: #888;
-        text-decoration: none;
-        .transitionFn(color, 0.4s);
-        &.ic-github:hover {
-            color: #222;
-        }
-        &.ic-weibo:hover {
-            color: #da412d;
-        }
-        &.ic-twitter:hover {
-            color: #5e97cb;
-        }
-        &.ic-email {
-            &:hover {
-                color: #759b4e;
-                span {
-                    visibility: visible;
-                    color: #555;
-                }
-            }
-            span {
-                position: absolute;
-                padding: 10px;
-                width: 150px;
-                left: -76px;
-                top: -40px;
-                line-height: 20px;
-                font-size: 10px;
-                font-family: @globleFontFamily;
-                text-align: center;
-                background-color: #fff;
-                visibility: hidden;
-                box-shadow: 0 1px 4px 0 rgba(0,0,0,0.3);
-                &:after {
-                    content: '';
-                    position: absolute;
-                    left: 50%;
-                    top: 100%;
-                    margin-left: -6px;
-                    width: 0px;
-                    height: 0px;
-                    border-top: 10px solid #fff;
-                    border-left: 10px solid transparent;
-                    border-right: 10px solid transparent;
-                }
-            }
-        }
-    }
-}
-
-
-//自适应
-@media all and (max-width: 768px) {
-    #header {
-        text-align: center;
-    }
-    #purpose, {
-        display: none;
-    }
-    #search {
-        width: 95%;
-        padding: 0 2.5%;
-    }
-    #history {
-        width: 95%;
-        left: 2.5%;
-    }
-    #title {
-        display: block;
-    }
-    #title, #entrance {
-        float: none;
-    }
-    #entrance {
-        margin-top: 10px;
-        li {
-            float: none;
-            display: inline;
-        }
-    }
-    div.lib {
-        padding-left: 2%;
-        padding-right: 2%;
-    }
-    #footer {
-        width: 90%;
-    }
-    th,td{
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-        padding: 10px 5px !important;
-    }
-
-    //    about
-    #about {
-        &>div {
-            display: block;
-        }
-        .ab-content {
-            width: 100%;
-            h1 {
-                text-align: center;
-                font-size: 20px;
-            }
-            p{
-                font-size: 14px;
-            }
-        }
-    }
-
-    #ab-toolbar{
-        position: absolute;
-        top: 0;
-        width: 40px;
-        height: 40px;
-        &:after {
-            top: 0;
-            margin: 0px;
-        }
-    }
-}
-
-
-//animation----------------------
-
-//about
-#about.ng-enter {
-    .animationFn(slideIn, 0.5s);
-}
-#about.ng-leave {
-    .animationFn(slideOut, 0.5s);
-}
-
-//loadcover
-#load-cover.ng-leave {
-    .animationFn(fadeOut, 0.5s);
-}
-
-//loading
-#load-cover {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    z-index: 1000;
-}
-.spinner {
-//    margin: 100px auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -25px;
-    margin-top: -15px;
-    width: 50px;
-    height: 30px;
-    text-align: center;
-    font-size: 10px;
-}
-
-.spinner > div {
-    background-color: #1ABC9C;
-    height: 100%;
-    width: 6px;
-    display: inline-block;
-
-    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
-    animation: stretchdelay 1.2s infinite ease-in-out;
-}
-
-.spinner .rect2 {
-    -webkit-animation-delay: -1.1s;
-    animation-delay: -1.1s;
-}
-
-.spinner .rect3 {
-    -webkit-animation-delay: -1.0s;
-    animation-delay: -1.0s;
-}
-
-.spinner .rect4 {
-    -webkit-animation-delay: -0.9s;
-    animation-delay: -0.9s;
-}
-
-.spinner .rect5 {
-    -webkit-animation-delay: -0.8s;
-    animation-delay: -0.8s;
-}
-
-@-webkit-keyframes stretchdelay {
-    0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
-    20% { -webkit-transform: scaleY(1.0) }
-}
-
-@keyframes stretchdelay {
-    0%, 40%, 100% {
-        transform: scaleY(0.4);
-        -webkit-transform: scaleY(0.4);
-    } 20% {
-          transform: scaleY(1.0);
-          -webkit-transform: scaleY(1.0);
-      }
-}
-
-@import "animate";
+@import "search";
+@import "bookmark";
