trigger event in angularjs way

--- a/static/css/search.less
+++ b/static/css/search.less
@@ -102,6 +102,7 @@ div.head {
     left: 0;
     background-color: #fefefe;
     box-shadow: 0 1px 2px 1px rgba(0,0,0,0.2);
+    z-index: 100;
     li{
         text-align: center;
         padding: 10px 0;
