--- a/static/css/style.css
+++ b/static/css/style.css
@@ -276,6 +276,7 @@ div.head a {
   left: 0;
   background-color: #fefefe;
   box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
+  z-index: 100;
 }
 #history li {
   text-align: center;
