add grunt bower and test

--- a/static/css/animate.less
+++ b/static/css/animate.less
@@ -1,52 +1,52 @@
-.slideOut {
+.slideIn {
     @-webkit-keyframes slideIn {
         0% {
-            width: 0;
+            right: -100%;
         }
         100% {
-            width: 100%;
+            right: 0%;
         }
     }
     @-moz-keyframes slideIn {
         0% {
-            width: 0;
+            right: -100%;
         }
         100% {
-            width: 100%;
+            right: 0%;
         }
     }
     @keyframes slideIn {
         0% {
-            width: 0;
+            right: -100%;
         }
         100% {
-            width: 100%;
+            right: 0%;
         }
     }
 }
-.slideIn {
+.slideOut {
     @-webkit-keyframes slideOut {
         0% {
-            width: 100%;
+            right: 0%;
         }
         100% {
-            width: 0%;
+            right: -100%;
         }
     }
     @-moz-keyframes slideOut {
         0% {
-            width: 100%;
+            right: 0%;
         }
         100% {
-            width: 0%;
+            right: -100%;
         }
     }
     @keyframes slideOut {
         0% {
-            width: 100%;
+            right: 0%;
         }
         100% {
-            width: 0%;
+            right: -100%;
         }
     }
 }
