--- a/static/css/search.less
+++ b/static/css/search.less
@@ -116,6 +116,7 @@ div.head {
 div.gh-info {
     text-align: center;
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     font-size: 0;
     margin-top: 40px/@z;
@@ -146,48 +147,15 @@ div.lib {
         font-size: 20px/@z;
         font-weight: normal;
         span {
-            position: relative;
             font-family: bookmark;
             font-size: 30px;
-            line-height: 30px;
+            line-height: 40px;
+            color: #ccc;
+            margin-left: 20px;
             vertical-align: middle;
-            color: #bcbcbc;
-            margin-left: 20px/@z;
             cursor: pointer;
             &.marked {
-                color: #DA412D;
-            }
-            &:hover {
-                span {
-                    visibility: visible;
-                }
-            }
-            span {
-                position: absolute;
-                padding: 10px;
-                width: 150px;
-                left: -95px;
-                top: -55px;
-                line-height: 20px;
-                font-size: 10px;
-                font-family: @globleFontFamily;
-                text-align: center;
-                background-color: #000;
-                border-radius: 8px;
-                color: #eee;
-                visibility: hidden;
-                &:after {
-                    content: '';
-                    position: absolute;
-                    left: 50%;
-                    top: 100%;
-                    margin-left: -6px;
-                    width: 0px;
-                    height: 0px;
-                    border-top: 10px solid #000;
-                    border-left: 10px solid transparent;
-                    border-right: 10px solid transparent;
-                }
+                color: #ff2530;
             }
         }
     }
@@ -282,133 +250,6 @@ div.lib {
     }
 }
 
-//about
-
-#about {
-    position: fixed;
-    font-size: 0px;
-    border-left: 1px solid #1c986e;
-    top: 0;
-    right: 0;
-    height: 100%;
-    //    animate hook
-    width: 100%;
-    //    width: 90%;
-    box-shadow: -2px 0 5px 0 rgba(0,0,0,0.2);
-    background-color: #fafafa;
-    &>div {
-        display: inline-block;
-    }
-    .ab-content {
-        box-sizing: border-box;
-        //        这个属性竟然连ff 27都还要加前缀，看来要三思而用
-        -moz-box-sizing: border-box;
-        padding-left: 5%;
-        width: 95%;
-        vertical-align: top;
-        font-size: 17px;
-        color: #777;
-    }
-}
-
-#ab-toolbar {
-    position: relative;
-    z-index: 100;
-    width: 5%;
-    height: 100%;
-    cursor: pointer;
-    .transitionFn(background-color, 0.4s);
-    a{
-        display: block;
-        width: 100%;
-        height: 100%;
-        &:after {
-            content: '>';
-            font-size: 20px;
-            position: absolute;
-            top: 50%;
-            margin-top: -20px;
-            width: 100%;
-            height: 40px;
-            line-height: 40px;
-            text-align: center;
-            font-family: killWords;
-            color: #fff;
-            background-color: #1ABC9C;
-        }
-    }
-    &:hover {
-        background-color: #1ABC9C;
-    }
-}
-
-#ab-contact{
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background-color: #ccc;
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    font-size: 25px;
-    a {
-        display: inline-block;
-        position: relative;
-        font-size: inherit;
-        vertical-align: middle;
-        margin: 0 10px;
-        font-family: killWords;
-        color: #888;
-        text-decoration: none;
-        .transitionFn(color, 0.4s);
-        &.ic-github:hover {
-            color: #222;
-        }
-        &.ic-weibo:hover {
-            color: #da412d;
-        }
-        &.ic-twitter:hover {
-            color: #5e97cb;
-        }
-        &.ic-email {
-            &:hover {
-                color: #759b4e;
-                span {
-                    visibility: visible;
-                    color: #555;
-                }
-            }
-            span {
-                position: absolute;
-                padding: 10px;
-                width: 150px;
-                left: -76px;
-                top: -40px;
-                line-height: 20px;
-                font-size: 10px;
-                font-family: @globleFontFamily;
-                text-align: center;
-                background-color: #fff;
-                visibility: hidden;
-                box-shadow: 0 1px 4px 0 rgba(0,0,0,0.3);
-                &:after {
-                    content: '';
-                    position: absolute;
-                    left: 50%;
-                    top: 100%;
-                    margin-left: -6px;
-                    width: 0px;
-                    height: 0px;
-                    border-top: 10px solid #fff;
-                    border-left: 10px solid transparent;
-                    border-right: 10px solid transparent;
-                }
-            }
-        }
-    }
-}
-
 
 //自适应
 @media all and (max-width: 768px) {
@@ -451,50 +292,14 @@ div.lib {
         box-sizing: border-box;
         padding: 10px 5px !important;
     }
-
-    //    about
-    #about {
-        &>div {
-            display: block;
-        }
-        .ab-content {
-            width: 100%;
-            h1 {
-                text-align: center;
-                font-size: 20px;
-            }
-            p{
-                font-size: 14px;
-            }
-        }
-    }
-
-    #ab-toolbar{
-        position: absolute;
-        top: 0;
-        width: 40px;
-        height: 40px;
-        &:after {
-            top: 0;
-            margin: 0px;
-        }
-    }
 }
 
 
 //animation----------------------
 
-//about
-#about.ng-enter {
-    .animationFn(slideIn, 0.5s);
-}
-#about.ng-leave {
-    .animationFn(slideOut, 0.5s);
-}
-
 //loadcover
 #load-cover.ng-leave {
-    .animationFn(fadeOut, 0.5s);
+    .animationFn(fadeOut, 0.3s);
 }
 
 //loading
